# AI_inference

./: .gitignore  .gitmodules  Dockerfile.client  Dockerfile.promremote  Dockerfile.stats  README.md  client.py  client_entry.sh  compose.yaml  connection.py  dashboard.json  dashboards.yaml  datasources.yaml  jetson.py  jmp_connection.py  local_compose.yaml  main.py  metrics.py  models.yaml  prometheus.yml  prometheus_local.yml  pyproject.toml  radar.py  remote_compose.yaml  remote_connection.py  run.py  run_config.yaml  startup.sh  stats.py  template.yaml  test.py
local_config/: Dockerfile.grafana  Dockerfile.promlocal  dashboard.json  local_compose.j2  local_compose.yaml  local_prom_config.yml  local_rules.yml
remote_config/: Dockerfile.client  Dockerfile.jsnode  Dockerfile.jstats  Dockerfile.jtop  Dockerfile.promremote  Dockerfile.vllmcpu  client.py  judge.py  prometheus_remote.yml  remote_compose.j2  remote_compose.yaml  remote_prom_config.j2  remote_prom_config.yml  rules.yml
results/: results.json
