[project]
name = "composetest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jumpstarter-all>=0.7.0.dev0",
    "podman==4.9.0",
    "prometheus-client>=0.22.0",
]

[[tool.uv.index]]
url = "https://pkg.jumpstarter.dev/main/simple"
