[project]
name = "composetest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "jumpstarter-all>=0.7.0.dev0",
    "podman>=5.4.0.1",
    "prometheus-client>=0.22.0",
]

[tool.uv.sources]
jumpstarter-all = { git = "https://github.com/jumpstarter-dev/jumpstarter", subdirectory = "packages/jumpstarter-all" }